// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTheme allows adding in custom theme properties 1`] = `
Object {
  "alpha": Object {
    "high": 0.9,
    "low": 0.4,
    "medium": 0.5,
  },
  "barStyle": "dark-content",
  "breakpoints": Object {
    "lg": 1200,
    "md": 800,
    "sm": 496,
    "xs": 320,
  },
  "buttons": Object {
    "alert": Object {
      "accent": "#FFFFFF",
      "fill": "#c64f55",
    },
    "default": Object {
      "accent": "#303030",
      "fill": "#A5A5A5",
    },
    "ghost": Object {
      "accent": "#303030",
      "fill": "#303030",
    },
    "overlay": Object {
      "accent": "#FFFFFF",
      "fill": "rgba(255, 255, 255, 0.4)",
    },
    "primary": Object {
      "accent": "#FFFFFF",
      "fill": "#00676D",
    },
    "secondary": Object {
      "accent": "#FFFFFF",
      "fill": "#17B582",
    },
    "tertiary": Object {
      "accent": "#FFFFFF",
      "fill": "#6EC5B8",
    },
  },
  "colors": Object {
    "action": Object {
      "default": "#A5A5A5",
      "primary": "#00676D",
      "secondary": "#17B582",
      "tertiary": "#6EC5B8",
    },
    "alert": "#c64f55",
    "background": Object {
      "accent": "rgba(165, 165, 165, 0.5)",
      "inactive": "#A5A5A5",
      "paper": "#FFFFFF",
      "screen": "#F8F7F4",
      "secondary": "#FFFFFF",
    },
    "black": "#000000",
    "darkPrimary": "#303030",
    "darkSecondary": "#505050",
    "darkTertiary": "#A5A5A5",
    "lightPrimary": "#F8F7F4",
    "lightSecondary": "#DBDBD9",
    "lightTertiary": "#A5A5A5",
    "paper": "#FFFFFF",
    "primary": "#00676D",
    "screen": "#F8F7F4",
    "secondary": "#17B582",
    "shadows": Object {
      "default": "rgba(0, 0, 0, 0.09999999999999998)",
    },
    "tertiary": "#6EC5B8",
    "text": Object {
      "link": "#17B582",
      "primary": "#303030",
      "secondary": "#505050",
      "tertiary": "#A5A5A5",
    },
    "transparent": "transparent",
    "white": "#FFFFFF",
    "wordOfChrist": "#8b0000",
  },
  "helpers": Object {
    "rem": [Function],
    "verticalRhythm": [Function],
  },
  "overlays": Object {
    "background-gradient": [Function],
    "default": [Function],
    "featured": [Function],
    "gradient-bottom": [Function],
    "gradient-top": [Function],
    "high": [Function],
    "low": [Function],
    "medium": [Function],
  },
  "overrides": Object {
    "MyComponent": Object {
      "some": "style",
    },
  },
  "shadows": Object {
    "default": Object {
      "android": Object {
        "elevation": 5,
      },
      "ios": Object {
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
    },
    "none": Object {
      "android": Object {
        "elevation": 0,
      },
      "ios": Object {
        "shadowOpacity": 0,
      },
    },
  },
  "sizing": Object {
    "avatar": Object {
      "large": 120,
      "medium": 80,
      "small": 40,
    },
    "baseBorderRadius": 16,
    "baseUnit": 16,
  },
  "type": "light",
  "types": Object {
    "dark": Object {
      "barStyle": "light-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#303030",
          "screen": "#000000",
          "secondary": "rgba(165, 165, 165, 0.5)",
        },
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "link": "#17B582",
          "primary": "#F8F7F4",
          "secondary": "#DBDBD9",
          "tertiary": "#A5A5A5",
        },
      },
    },
    "light": Object {
      "barStyle": "dark-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "#F8F7F4",
          "secondary": "#FFFFFF",
        },
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "link": "#17B582",
          "primary": "#303030",
          "secondary": "#505050",
          "tertiary": "#A5A5A5",
        },
      },
    },
  },
  "typography": Object {
    "baseFontSize": 16,
    "baseLineHeight": 24,
    "sans": Object {
      "black": Object {
        "default": "InterUI-Black",
        "italic": "InterUI-BlackItalic",
      },
      "bold": Object {
        "default": "InterUI-Bold",
        "italic": "InterUI-BoldItalic",
      },
      "medium": Object {
        "default": "InterUI-Medium",
        "italic": "InterUI-MediumItalic",
      },
      "regular": Object {
        "default": "InterUI-Regular",
        "italic": "InterUI-Italic",
      },
    },
    "serif": Object {
      "bold": Object {
        "default": "DroidSerif-Bold",
        "italic": "DroidSerif-BoldItalic",
      },
      "regular": Object {
        "default": "DroidSerif",
        "italic": "DroidSerif-Italic",
      },
    },
    "ui": Object {
      "regular": "System",
    },
  },
}
`;

exports[`createTheme has a custom colors 1`] = `
Object {
  "action": Object {
    "default": "#A5A5A5",
    "primary": "red",
    "secondary": "#17B582",
    "tertiary": "#6EC5B8",
  },
  "alert": "#c64f55",
  "background": Object {
    "accent": "rgba(165, 165, 165, 0.5)",
    "inactive": "#A5A5A5",
    "paper": "#FFFFFF",
    "screen": "#F8F7F4",
    "secondary": "#FFFFFF",
  },
  "black": "#000000",
  "darkPrimary": "#303030",
  "darkSecondary": "#505050",
  "darkTertiary": "#A5A5A5",
  "lightPrimary": "#F8F7F4",
  "lightSecondary": "#DBDBD9",
  "lightTertiary": "#A5A5A5",
  "otherColor": "green",
  "paper": "#FFFFFF",
  "primary": "red",
  "screen": "#F8F7F4",
  "secondary": "#17B582",
  "shadows": Object {
    "default": "rgba(0, 0, 0, 0.09999999999999998)",
  },
  "tertiary": "#6EC5B8",
  "text": Object {
    "link": "#17B582",
    "primary": "#303030",
    "secondary": "#505050",
    "tertiary": "#A5A5A5",
  },
  "transparent": "transparent",
  "white": "#FFFFFF",
  "wordOfChrist": "#8b0000",
}
`;

exports[`createTheme has custom typography 1`] = `
Object {
  "baseFontSize": "24",
  "baseLineHeight": 24,
  "otherProp": true,
  "sans": Object {
    "black": Object {
      "default": "InterUI-Black",
      "italic": "InterUI-BlackItalic",
    },
    "bold": Object {
      "default": "InterUI-Bold",
      "italic": "InterUI-BoldItalic",
    },
    "medium": Object {
      "default": "InterUI-Medium",
      "italic": "InterUI-MediumItalic",
    },
    "regular": Object {
      "default": "InterUI-Regular",
      "italic": "InterUI-Italic",
    },
  },
  "serif": Object {
    "bold": Object {
      "default": "DroidSerif-Bold",
      "italic": "DroidSerif-BoldItalic",
    },
    "regular": Object {
      "default": "DroidSerif",
      "italic": "DroidSerif-Italic",
    },
  },
  "ui": Object {
    "regular": "System",
  },
}
`;

exports[`createTheme switches to a dark theme 1`] = `
Object {
  "alpha": Object {
    "high": 0.9,
    "low": 0.4,
    "medium": 0.5,
  },
  "barStyle": "light-content",
  "breakpoints": Object {
    "lg": 1200,
    "md": 800,
    "sm": 496,
    "xs": 320,
  },
  "buttons": Object {
    "alert": Object {
      "accent": "#FFFFFF",
      "fill": "#c64f55",
    },
    "default": Object {
      "accent": "#F8F7F4",
      "fill": "#A5A5A5",
    },
    "ghost": Object {
      "accent": "#F8F7F4",
      "fill": "#F8F7F4",
    },
    "overlay": Object {
      "accent": "#FFFFFF",
      "fill": "rgba(255, 255, 255, 0.4)",
    },
    "primary": Object {
      "accent": "#FFFFFF",
      "fill": "#00676D",
    },
    "secondary": Object {
      "accent": "#FFFFFF",
      "fill": "#17B582",
    },
    "tertiary": Object {
      "accent": "#FFFFFF",
      "fill": "#6EC5B8",
    },
  },
  "colors": Object {
    "action": Object {
      "default": "#A5A5A5",
      "primary": "#00676D",
      "secondary": "#17B582",
      "tertiary": "#6EC5B8",
    },
    "alert": "#c64f55",
    "background": Object {
      "accent": "rgba(165, 165, 165, 0.5)",
      "inactive": "#A5A5A5",
      "paper": "#303030",
      "screen": "#000000",
      "secondary": "rgba(165, 165, 165, 0.5)",
    },
    "black": "#000000",
    "darkPrimary": "#303030",
    "darkSecondary": "#505050",
    "darkTertiary": "#A5A5A5",
    "lightPrimary": "#F8F7F4",
    "lightSecondary": "#DBDBD9",
    "lightTertiary": "#A5A5A5",
    "paper": "#FFFFFF",
    "primary": "#00676D",
    "screen": "#F8F7F4",
    "secondary": "#17B582",
    "shadows": Object {
      "default": "rgba(0, 0, 0, 0.09999999999999998)",
    },
    "tertiary": "#6EC5B8",
    "text": Object {
      "link": "#17B582",
      "primary": "#F8F7F4",
      "secondary": "#DBDBD9",
      "tertiary": "#A5A5A5",
    },
    "transparent": "transparent",
    "white": "#FFFFFF",
    "wordOfChrist": "#8b0000",
  },
  "helpers": Object {
    "rem": [Function],
    "verticalRhythm": [Function],
  },
  "overlays": Object {
    "background-gradient": [Function],
    "default": [Function],
    "featured": [Function],
    "gradient-bottom": [Function],
    "gradient-top": [Function],
    "high": [Function],
    "low": [Function],
    "medium": [Function],
  },
  "overrides": Object {},
  "shadows": Object {
    "default": Object {
      "android": Object {
        "elevation": 5,
      },
      "ios": Object {
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
    },
    "none": Object {
      "android": Object {
        "elevation": 0,
      },
      "ios": Object {
        "shadowOpacity": 0,
      },
    },
  },
  "sizing": Object {
    "avatar": Object {
      "large": 120,
      "medium": 80,
      "small": 40,
    },
    "baseBorderRadius": 16,
    "baseUnit": 16,
  },
  "type": "dark",
  "types": Object {
    "dark": Object {
      "barStyle": "light-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#303030",
          "screen": "#000000",
          "secondary": "rgba(165, 165, 165, 0.5)",
        },
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "link": "#17B582",
          "primary": "#F8F7F4",
          "secondary": "#DBDBD9",
          "tertiary": "#A5A5A5",
        },
      },
    },
    "light": Object {
      "barStyle": "dark-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "#F8F7F4",
          "secondary": "#FFFFFF",
        },
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "link": "#17B582",
          "primary": "#303030",
          "secondary": "#505050",
          "tertiary": "#A5A5A5",
        },
      },
    },
  },
  "typography": Object {
    "baseFontSize": 16,
    "baseLineHeight": 24,
    "sans": Object {
      "black": Object {
        "default": "InterUI-Black",
        "italic": "InterUI-BlackItalic",
      },
      "bold": Object {
        "default": "InterUI-Bold",
        "italic": "InterUI-BoldItalic",
      },
      "medium": Object {
        "default": "InterUI-Medium",
        "italic": "InterUI-MediumItalic",
      },
      "regular": Object {
        "default": "InterUI-Regular",
        "italic": "InterUI-Italic",
      },
    },
    "serif": Object {
      "bold": Object {
        "default": "DroidSerif-Bold",
        "italic": "DroidSerif-BoldItalic",
      },
      "regular": Object {
        "default": "DroidSerif",
        "italic": "DroidSerif-Italic",
      },
    },
    "ui": Object {
      "regular": "System",
    },
  },
}
`;

exports[`createTheme throws an error for an unsupported theme type 1`] = `"The theme type boom is not supported"`;
